--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,13 @@
 {
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "printWidth": 80,
-  "trailingComma": "es5",
-  "arrowParens": "avoid",
-  "useTabs": false,
-  "tabWidth": 2
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always"
 }
