--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,14 +11,25 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-serve-static-core": "^4.17.29",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/validator": "^13.7.4",
+    "dotenv": "^16.0.1",
+    "prisma": "^4.1.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "@prisma/client": "^4.1.0",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "validator": "^13.7.0"
   }
 }
