--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,6 +7,7 @@
     "ts-path": "ts-node -r tsconfig-paths/register",
     "start": "pnpm ts-path ./src/index.ts",
     "start:build": "node -r ./tsconfig-paths-bootstrap.js ./dist/src/index.js",
+    "dev": "nodemon -e ts --exec ts-node -r tsconfig-paths/register ./src/index.ts",
     "lint": "eslint . --ext .ts",
     "build": "tsc"
   },
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.19",
     "validator": "^13.7.0"
   }
 }
