--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.19",
+    "socket.io": "^4.5.2",
     "validator": "^13.7.0"
   }
 }
