--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.7"
+    "react-toastify": "^9.0.7",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
