--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "outDir": "./dist",
+    "rootDir": "./",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
@@ -19,5 +20,5 @@
     "lib": ["esnext"]
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["**/*.ts", "../frontend/src/utils/time.ts"]
+  "include": ["**/*.ts"]
 }
