update Dockerfile github

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:lts-alpine as build
+FROM node:lts-alpine
+ARG PORT
 
 RUN mkdir -p /app
 WORKDIR /app
@@ -6,21 +7,8 @@ WORKDIR /app
 COPY package.json /app 
 RUN yarn
 COPY . .
+RUN npx prisma migrate deploy
 RUN yarn build
 
-FROM build as development
-EXPOSE 3000
-CMD ["yarn","dev"]
-
-
-FROM node:lts-alpine as production
-RUN mkdir -p /app
-WORKDIR /app
-
-COPY package.json /app 
-RUN yarn
-RUN npx prisma migrate deploy
-
-COPY --from=build /app/dist ./dist
 EXPOSE ${PORT}
 CMD ["yarn","start:build"]
