--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,13 +1,16 @@
 FROM node:lts-alpine
-ARG PORT
+ARG PORT 
+ARG DATABASE_URL
 
 RUN mkdir -p /app
 WORKDIR /app
 
+RUN export DATABASE_URL=${DATABASE_URL}
+
 COPY package.json /app 
 RUN yarn
 COPY . .
-RUN npx prisma migrate deploy
+RUN npx prisma generate
 RUN yarn build
 
 EXPOSE ${PORT}
